fixes photo cropping

--- a/src/Zazz.Web/Content/style.css
+++ b/src/Zazz.Web/Content/style.css
@@ -1017,12 +1017,15 @@ a.lightbox-prev, a.lightbox-next {
         margin: 0;
     }
 
-    .weekly img {
-        width: 120px;
-        height: 120px;
-        -ms-border-radius: 4px;
-        border-radius: 4px;
-    }
+.weekly-description-img-div {
+    width: 120px;
+    height: 120px;
+    -ms-border-radius: 4px;
+    border-radius: 4px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
 
 .special-events {
     float: right;
@@ -1755,6 +1758,15 @@ li.new-notification {
     list-style: none;
     padding: 0;
     margin: 0;
+}
+
+.user-list-img-div {
+    width: 135px;
+    height: 135px;
+    margin-left: 10px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
 }
 
 .profile-photos li {
